Bug 50499 - SLIDESHOW: Custom animation "Put on the Brake" incomplete when FILEOPEN particular(?) MSO2007 .pptx
Summary: SLIDESHOW: Custom animation "Put on the Brake" incomplete when FILEOPEN parti...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0
Keywords: filter:pptx
Depends on:
Blocks: PPTX Object-Animations
  Show dependency treegraph
 
Reported: 2012-05-30 04:19 UTC by Rainer Bielefeld Retired
Modified: 2018-07-26 12:17 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2012-05-30 04:19:11 UTC
Steps how to reproduce:
1. Download sample document
  <https://issues.apache.org/ooo/attachment.cgi?id=77819>
2. create a copy of sampled document 
3. open and sample document and start slide show with LibO
4. Open and start with MS ppt viewer
5. Compare result
   Expected: same animations. objects move from left into screen and stop with 
             emergency stop from movement
   Actual: emergency stop "off the cuff", object appears at the final point of 
           the moving instead of flying in

Still in Master.

NEW due to Confirmation in AOOo
Comment 1 Rainer Bielefeld Retired 2012-05-30 04:21:33 UTC
Seems inherited from OOo

@rodo:
Please set Status to ASSIGNED and add yourself to "Assigned To" if you accept this Bug or forward the Bug if it's not your turf.
Comment 2 A (Andy) 2013-04-25 21:10:12 UTC
can't even reproduce it, because this file gets corrupted when saving it with LO 4.0.2.2 (Win7 Home, 64bit) as pptx, therefore I can't even open it with MSO 2007
Comment 3 ign_christian 2013-05-12 04:45:33 UTC
Tested on LO 4.0.3.3 (Win7 Home Premium 32bit) 

Original document will do effect Put on the Brakes (not moving from left into screen). Then save as another file (.pptx) will remove all effects even its still written on Custom Animation pane.
Comment 4 QA Administrators 2015-03-04 02:23:57 UTC Comment hidden (obsolete)
Comment 5 Buovjaga 2015-03-24 17:12:22 UTC
Cannot open document.
General Error.
General input/output error.

Win 7 Pro 64-bit, LibO Version: 4.4.1.2
Build ID: 45e2de17089c24a1fa810c8f975a7171ba4cd432
Locale: fi_FI

Version: 4.5.0.0.alpha0+
Build ID: 181feb38d95e25980b96c2f6802cc906410abb13
TinderBox: Win-x86@62-TDF, Branch:MASTER, Time: 2015-03-19_23:38:28
Locale: fi_FI
Comment 6 tommy27 2016-04-16 07:25:49 UTC Comment hidden (obsolete)
Comment 7 QA Administrators 2017-05-22 13:27:45 UTC Comment hidden (obsolete)
Comment 8 Buovjaga 2017-06-02 16:17:34 UTC
Still repro.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.5.0.0.alpha0+
Build ID: c855400e9686ddd8bcba5691393f839f6f52c966
CPU threads: 8; OS: Linux 4.11; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on June 2nd 2017
Comment 9 Commit Notification 2018-07-25 13:02:30 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d459f4c92e7bbb7e031b8cbba395d4767ecf344e

tdf#50499 convert by, from, and to of AnimContext.

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.