tdf#50499 convert by, from, and to of AnimContext.

Also change testTdf104788 because the expected value
is taken as a double and decimal places are omitted
if there isn't any.

Change-Id: I16cb363b1ce0ff09da2df361849d47819bf9ced4
Reviewed-on: https://gerrit.libreoffice.org/57413
Tested-by: Jenkins
Reviewed-by: Mark Hung <marklh9@gmail.com>